@@ -18,14 +18,16 @@ along with this program; if not, write to the Free Software
 Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307,
 USA.
 
-For the most up-to-date information see the CS@Parma software
-site: http://www.cs.unipr.it/Software/ . */
+For the most up-to-date information see
+http://www.cs.unipr.it/Software/ . */
 
 #ifndef PWL_Watchdog_defs_hh
 #define PWL_Watchdog_defs_hh 1
 
 #include "Watchdog.types.hh"
-#include <list>
+#include "Time.defs.hh"
+#include "Handler.types.hh"
+#include "Pending_List.defs.hh"
 #include <cassert>
 
 #ifdef HAVE_SYS_TIME_H
@@ -41,7 +43,7 @@ extern "C" void PWL_handle_timeout(int signum);
 class Watchdog {
 public:
   template <typename Flag_Base, typename Flag>
-  Watchdog(int units, const Flag_Base* volatile* holder, Flag& flag);
+  Watchdog(int units, const Flag_Base* volatile& holder, Flag& flag);
 
   Watchdog(int units, void (*function)());
   ~Watchdog();
@@ -52,87 +54,9 @@ private:
   static void initialize();
   static void finalize();
 
-  //! A class for representing and manipulationg positive time intervals.
-  class Time {
-  private:
-    int secs;
-    int microsecs;
-
-  public:
-    //! Zero seconds.
-    Time();
-
-    explicit Time(unsigned int units);
-
-    void set(int s, int m);
-
-    void reset();
-
-    int seconds() const;
-
-    int microseconds() const;
-
-    Time& operator +=(const Time& y);
-
-    Time& operator -=(const Time& y);
-
-    Time operator+(const Time& y) const;
-    Time operator-(const Time& y) const;
-    bool operator==(const Time& y) const;
-    bool operator!=(const Time& y) const;
-    bool operator<(const Time& y) const;
-    bool operator<=(const Time& y) const;
-    bool operator>(const Time& y) const;
-    bool operator>=(const Time& y) const;
-  };
-
-  class Pending_Element;
-  friend class Pending_Element;
-  friend Time& Time::operator+=(const Time& y);
-  friend Time& Time::operator-=(const Time& y);
-  friend Time Time::operator+(const Time& y) const;
-  friend Time Time::operator-(const Time& y) const;
-
-  // Different kinds of handler for the watchdog events.
-  class Handler {
-  public:
-    virtual void act() const = 0;
-  };
-
-  template <typename Flag_Base, typename Flag>
-  class Handler_Flag : virtual public Handler {
-  private:
-    const Flag_Base* volatile* holder;
-    Flag& flag;
-
-  public:
-    Handler_Flag(const Flag_Base* volatile* h, Flag& f);
-    void act() const;
-  };
-
-  class Handler_Function : virtual public Handler {
-  public:
-    Handler_Function(void (*f)());
-    void act() const;
-
-  private:
-    void (*function)();
-  };
-
-  // The pending watchdog events.
-  class Pending_Element {
-  public:
-    Time deadline;
-    const Handler* handler;
-    bool* p_expired_flag;
-    Pending_Element(const Time& d, const Handler* h, bool* p);
-  };
-
-  typedef std::list<Pending_Element> Pending;
-
   bool expired;
-  const Handler* handler;
-  Pending::iterator pending_position;
+  const Handler& handler;
+  Pending_List::Iterator pending_position;
 
 private:
   // Just to prevent their use.
@@ -166,24 +90,19 @@ private:
   // Records the time elapsed since last fresh start.
   static Time time_so_far;
 
-  // The ordered queue of pending watchdog events.
-  static Pending pending;
+  //! The ordered queue of pending watchdog events.
+  static Pending_List pending;
 
-  // The actual signal handler.
+  //! The actual signal handler.
   static void handle_timeout(int);
 
-  // Inserts a new watchdog even at the right place in pending.
-  static Pending::iterator insert_pending(const Time& deadline,
-					  const Handler* handler,
-					  bool* p_expired);
-
   // Handle the addition of a new watchdog event.
-  static Pending::iterator new_watchdog_event(int units,
-					      const Handler* handler,
-					      bool* p_expired);
+  static Pending_List::Iterator new_watchdog_event(int units,
+						   const Handler& handler,
+						   bool& expired_flag);
 
   // Handle the removal of a watchdog event.
-  void remove_watchdog_event(Pending::iterator position);
+  void remove_watchdog_event(Pending_List::Iterator position);
 
   // Whether the alarm clock is running.
   static volatile bool alarm_clock_running;
