@@ -985,10 +985,9 @@ ppl_set_timeout(Prolog_term_ref t_time) {
     static timeout_exception e;
     unsigned hundredth_secs = term_to_unsigned<unsigned>(t_time);
     p_timeout_object =
-      new
-      Parma_Watchdog_Library::Watchdog(hundredth_secs,
-				       &abandon_exponential_computations,
-				       e);
+      new Parma_Watchdog_Library::Watchdog(hundredth_secs,
+					   abandon_exponential_computations,
+					   e);
     return PROLOG_SUCCESS;
   }
   CATCH_ALL;
